# stdex

./: .gitmodules  CMakeLists.txt  README.md  string.h
include/stdex/: string.h
projects/linux/: makefile
projects/linux/unittest/: makefile
projects/win32/: stdex.sln
projects/win32/Test/: Test.vcxproj
projects/win32/UnitTest/: UnitTest.vcxproj  UnitTest.vcxproj.filters
projects/win32/stdex/: stdex.vcxproj  stdex.vcxproj.filters
unittest/: UnitTest.cpp  scope_exit.cpp  string.cpp
