cmake_minimum_required(VERSION 2.4)
project(stdex)
set(PROJECT_BINARY_DIR bin)
set(PROJECT_SOURCE_DIR .)
file(GLOB_RECURSE SRC_LIST "unittest/*cpp")
if(${CMAKE_COMPILER_IS_GNUCXX})
  set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Werror -Wfatal-errors")
endif()
add_executable(unittest ${SRC_LIST})
